stylesheets/layout.css
:root {
  --background-color: hsl(0, 0%, 98%);
  --text-color-lightness: 27%;
  --text-color: hsl(0, 0%, var(--text-color-lightness));
  --header-text-color: hsl(0, 0%, calc(var(--text-color-lightness) - 18%));
  --link-text-color: hsl(0, 0%, calc(var(--text-color-lightness) - 7%));
  --link-text-hover-color: hsl(0, 0%, calc(var(--text-color-lightness) - 27%));
}

@media (prefers-color-scheme: dark) {
  :root {
    --background-color: hsl(212, 15%, 22%);
    --text-color-lightness: 85%;
    --header-text-color: hsl(0, 0%, calc(var(--text-color-lightness) + 8%));
    --link-text-color: hsl(0, 0%, calc(var(--text-color-lightness) + 5%));
    --link-text-hover-color: hsl(0, 0%, calc(var(--text-color-lightness) + 15%));
  }
}

body {
  margin-bottom: 18em;
  margin-bottom: 50vh;
  font: 18px/1.4 "Computer Modern Serif", "Georgia", "Times New Roman", serif;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  background: var(--background-color);
  color: var(--text-color);
}

* {
  margin: 0;
  padding: 0;
}

.container {
  margin: 0 calc(1em + 5%);
}

.label {
  font-weight: bold;
}

@media (min-width: 700px) {
  .container {
    display: grid;
    grid-template-columns: 4fr 8fr 1fr 3fr;
    grid-column-gap: 0px;
    max-width: 1200px;
    margin: 0 auto;
  }

  .div1 { grid-area: 1 / 2 / 2 / 4; }
  .div2 { grid-area: 2 / 1 / 3 / 2; }
  .div3 { grid-area: 2 / 2 / 3 / 3; }
  .div4 { grid-area: 3 / 1 / 4 / 2; }
  .div5 { grid-area: 3 / 2 / 4 / 3; }
  .div6 { grid-area: 4 / 1 / 5 / 2; }
  .div7 { grid-area: 4 / 2 / 5 / 3; }
  .div8 { grid-area: 5 / 2 / 6 / 3; }
  .div9 { grid-area: 6 / 1 / 7 / 2; }
  .div10 { grid-area: 6 / 2 / 7 / 3; }
  .div11 { grid-area: 7 / 1 / 8 / 2; }
  .div12 { grid-area: 7 / 2 / 8 / 3; }
  .div13 { grid-area: 8 / 1 / 9 / 2; }
  .div14 { grid-area: 8 / 2 / 9 / 3; }
  .div15 { grid-area: 9 / 2 / 10 / 3; }
  .div16 { grid-area: 10 / 1 / 11 / 2; }
  .div17 { grid-area: 10 / 2 / 11 / 3; }
  .div18 { grid-area: 11 / 1 / 12 / 2; }
  .div19 { grid-area: 11 / 2 / 12 / 3; }
  .div20 { grid-area: 12 / 2 / 13 / 3; }

  .label {
    text-align: right;
    margin-right: 1em;
    font-weight: normal;
  }

  .detail {
    margin-bottom: 10px;
  }
}

h1, h2, h3, h4, h5, h6 {
  color: var(--header-text-color);
  font-weight: normal;
}

h1 {
  font-size: 2.6em;
  margin-bottom: 16px;
}

h2 {
  font-size: 1.7em;
  margin-bottom: 20px;
}

h4 {
  font-size: 1.2em;
}

p {
  margin-bottom: 20px;
  text-align: justify;
  -ms-text-justify: newspaper;
}

button {
  margin: 0;
  padding: 0;
  border: 0;
  background: transparent;
  font: inherit;
  cursor: pointer;
}

button::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.edu-item,
.edu-institution,
.project-item {
  display: block;
}

hr {
  margin: 0 0 20px 0;
  border-style: dashed;
  border-color: var(--text-color);
  border-width: 1px 0 0 0;
}

.skills {
  text-align: left;
  margin-bottom: 20px;
  list-style: none;
}

.skills .tag {
  display: inline-block;
  padding: 2px 7px;
  margin-bottom: 4px;
  line-height: 1;
  border: 1px solid var(--text-color);
  border-radius: 4px;
}

button,
a,
a:visited {
  color: var(--link-text-color);
  text-decoration: none;
}

.em-link {
  border-bottom: 1px dotted var(--link-text-color);
}

@media (hover: hover) {
  button:hover,
  button:focus,
  a:hover,
  a:focus {
    color: var(--link-text-hover-color);
    text-decoration: none;
  }

  .em-link:hover {
    border-bottom: 1px solid var(--link-text-hover-color);
  }
}

.header-link {
  display: none;
  font-size: 19px;
  font-weight: 400;
  vertical-align: bottom;
  text-decoration: none;
  border-bottom: none;
}

.section-header:hover > .header-link {
  display: inline;
}

.gotop-button,
.print-button {
  position: fixed;
  text-shadow: 0 0 5px var(--background-color);
}

.gotop-button {
  right: 40px;
  bottom: 40px;
  transition: opacity .4s;
  opacity: 0;
}

.opaque {
  opacity: 1;
}

.print-button {
  display: none;
  left: 40px;
  top: 40px;
}

@media
  /* ----------- Non-Retina Screens ----------- */
  screen
  and (min-width: 1024px)
  and (-webkit-min-device-pixel-ratio: 1)
,
  /* ----------- Retina Screens ----------- */
  screen
  and (min-width: 1024px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (min-resolution: 192dpi)
{
  .print-button {
    display: block;
  }
}

@media only screen and (min-width: 768px) {
  body {
    margin-top: 40px;
  }
}

@media only screen and (min-width: 480px) and (max-width: 767px) {
  body {
    margin-top: 30px;
  }

  h2 {
    font-size: 25px;
    line-height: 30px;
  }

  p {
    font-size: 15px;
    line-height: 22px;
  }

  h2,
  p,
  ul {
    margin-bottom: 10px !important;
  }

  .gotop-button {
    right: 20px;
    bottom: 20px;
  }
}

@media only screen and (max-width: 479px) {
  body {
    margin-top: 20px;
  }

  section {
    text-align: left;
  }

  h1 {
    font-size: 40px;
  }

  h2 {
    font-size: 25px;
    line-height: 30px;
  }

  p {
    font-size: 15px;
    line-height: 22px;
  }

  h2,
  p,
  ul {
    margin-bottom: 10px !important;
  }

  .gotop-button {
    right: 20px;
    bottom: 20px;
  }
}

@media only screen and (max-width: 319px) {
  body {
    margin-top: 10px;
  }

  h4 {
    font-size: 17px;
  }

  .gotop-button {
    right: 10px;
    bottom: 10px;
  }
}

@media print {
  body {
    background: white;
    color: black;
    margin: 0;
    padding: 0 !important;
    font-size: 12px;
    line-height: 1.2;
  }

  .div8, .div10, .div12, .skills, .div20 {
    grid-column-end: 4;
  }

  h1, h2, h3, h4, h5, h6, ul, ol, img {
    page-break-after: avoid;
  }

  a[href^="http"]:after {
    content: " (" attr(href) ") ";
    font-size: 0.8em;
    font-weight: normal;
  }

  .no-print {
    display: none !important;
  }

  .em-link,
  .em-link:visited,
  .em-link:hover,
  .em-link:focus {
    border: 0;
  }
}

@font-face {
  font-family: "Computer Modern Serif";
  src: url("../fonts/cmu_serif_roman.eot");
  src: url("../fonts/cmu_serif_roman.eot?#iefix") format("embedded-opentype"),
    url("../fonts/cmu_serif_roman.woff") format("woff"),
    url("../fonts/cmu_serif_roman.ttf") format("truetype");
  font-style: normal;
  font-weight: normal;
}

@font-face {
  font-family: "Computer Modern Serif";
  src: url("../fonts/cmu_serif_italic.eot");
  src: url("../fonts/cmu_serif_italic.eot?#iefix") format("embedded-opentype"),
    url("../fonts/cmu_serif_italic.woff") format("woff"),
    url("../fonts/cmu_serif_italic.ttf") format("truetype");
  font-style: italic;
  font-weight: normal;
}

@font-face {
  font-family: "Computer Modern Serif";
  src: url("../fonts/cmu_serif_bold_italic.eot");
  src: url("../fonts/cmu_serif_bold_italic.eot?#iefix") format("embedded-opentype"),
    url("../fonts/cmu_serif_bold_italic.woff") format("woff"),
    url("../fonts/cmu_serif_bold_italic.ttf") format("truetype");
  font-style: italic;
  font-weight: bold;
}

@font-face {
  font-family: "Computer Modern Serif";
  src: url("../fonts/cmu_serif_bold.eot");
  src: url("../fonts/cmu_serif_bold.eot?#iefix") format("embedded-opentype"),
    url("../fonts/cmu_serif_bold.woff") format("woff"),
    url("../fonts/cmu_serif_bold.ttf") format("truetype");
  font-style: normal;
  font-weight: bold;
}

